Wed May 23 20:07:53 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimcontextsimple.c: Add Mode_Switch to list of keys
	to ignore when doing compose processing.

2001-05-22  Joe Shaw  <joe@ximian.com>

	* gtk/gtktextiter.c (_gtk_text_btree_get_iter_at_last_toggle): 
	Simplify as suggested by Havoc. Just get the last iter and work
	backward to the tag instead of getting a line and working back from
	there. Fixes passing in an invalid offset to
	iter_init_from_byte_offset().

Tue May 22 16:25:27 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreeview*.h: 
	* gtk/gtkcell*.h:
	* gtk/gtk*store.h:
	Added patch from Jeff Franks <jcf@tpg.com.au> to add GET_CLASS
	macros to all objects.

Tue May 22 15:13:52 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkcellrenderertext.c
	(gtk_cell_renderer_text_set_fixed_size): Evil function to deal
	with very large (TM) amounts of text.  May be moved to
	GtkCellRenderer in the future, though I'm not sure it wants to be
	this accessible.

	* gtk/gtktreeviewcolumn.c (gtk_tree_view_column_update_button):
	More sanity brought to this class.  I like it.

	* tests/testtreecolumns.c (ViewColumnModel): Amazingly scary test
	case.  Kids, don't try this at home.

	* gtk/gtktreemodel.c (gtk_tree_model_get_iter_root): new
	convenience function.

	* gtk/gtkwindow.c (gtk_window_set_geometry_hints): Fix typo in docs.

2001-05-21  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkfontsel.c:
	Added properties. Based on patch by Lee Mallabone.

	* gtk/gtkruler.c:
	* gtk/gtkhruler.c:
	* gtk/gtkvruler.c:
	* gtk/gtktext.c:
	* gtk/gtktextview.c:
	Converted GtkArg to GParam. Based on patches by John Margaglione.

	* tests/Makefile.am:
	* tests/testtext.c:
	Add a property editor to testtext.
	
Mon May 21 11:29:21 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtk{h,v,}paned.c: Only show the separator if 

	* configure.in: Fixed reversed conditional causing all image
	libraries to be linked in.

2001-05-21  Joe Shaw  <joe@ximian.com>
