@@ -35,7 +35,6 @@ GtkTreeViewColumn
 @window: 
 @xalign: 
 @property_changed_signal: 
-@clickable_signal: 
 @width: 
 @requested_width: 
 @min_width: 
